@@ -35,6 +35,11 @@ has deprecated_ok => (
     default => 0,
 );
 
+has check_module_versions => (
+    is => 'ro', isa => 'Bool',
+    default => 1,
+);
+
 sub mvp_multivalue_args { qw(phases) }
 sub mvp_aliases { { phase => 'phases' } }
 
@@ -89,14 +94,17 @@ sub after_build
                 next;
             }
 
-            my $has = $Module::CoreList::version{$self->starting_version->numify}{$prereq};
-            $has = version->parse($has);    # version.pm XS hates tie() - RT#87983
-            my $wanted = version->parse($prereqs->{$phase}{requires}{$prereq});
-
-            if ($has < $wanted)
+            if ($self->check_module_versions)
             {
-                push @insufficient_version, [ map { "$_" } $phase, $prereq, $wanted, $self->starting_version, $has];
-                next;
+                my $has = $Module::CoreList::version{$self->starting_version->numify}{$prereq};
+                $has = version->parse($has);    # version.pm XS hates tie() - RT#87983
+                my $wanted = version->parse($prereqs->{$phase}{requires}{$prereq});
+
+                if ($has < $wanted)
+                {
+                    push @insufficient_version, [ map { "$_" } $phase, $prereq, $wanted, $self->starting_version, $has ];
+                    next;
+                }
             }
 
             if (not $self->deprecated_ok)
@@ -190,6 +198,15 @@ determining the version of the latest Perl release.)
 
 A boolean flag indicating whether it is considered acceptable to depend on a
 deprecated module. Defaults to 0.
+
+=item * C<check_module_versions>
+
+A boolean flag indicating whether the specific module version available in the
+C<starting_version> of perl should also be checked.  Defaults to 1.
+
+(For example, a prerequisite of L<Test::More> 0.88  at C<starting_version>
+5.010 would fail with C<check_module_versions> set, as the version of
+L<Test::More> that shipped with that version of perl was only 0.72.
 
 =back
 
